--- a/activities/social-1.html
+++ b/activities/social-1.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Example Activity - SkyDiving</title>
+  <link rel="stylesheet" href="../css/activity.css">
 </head>
 <body>
+<div id="img-container">
+  <img src="sky.jpg" alt="Smiley face">
+</div>
+
+<section id="description">
+  <div class="en">
+    <h1>
+      SkyDiving
+    </h1>
+    <p>
+      Ever wondered what it would feel like to fly? To span you wings and feel the thrill as the air rushes by? Well,
+      you're in luck!
+    </p>
+    <p>
+      We at Sky Thrills are inviting you for an epic sky diving trip across Turkey! You might be thinking, well that's
+      exciting and
+      all, but this sounds dangerous! Well, if you are thinking that - don't worry, we got you covered. Strap onto one
+      of our pro
+      instructors and enjoy the dive!
+    </p>
+    <p>
+      p.s. we will give you go pros, so don't worry about finding a camera.
+    </p>
+    <p>
+      p.s.s. Don't forget to have fun.
+    </p>
+  </div>
+  <div class="tr hide">
+    <h1>
+      SkyDiving
+    </h1>
+    <p>
+      This text will be in Turkish (and everything else on this website too).
+    </p>
+  </div>
+</section>
+<section id="details">
+  <p><strong>Date:</strong>15.06.2019</p>
+  <p><strong>Time:</strong>12:00 pm</p>
+  <p><strong>Price:</strong>300 TL</p>
+</section>
+<section id="venue">
+  <h3>Venue</h3>
+  <div class="container">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d192698.5509262026!2d28.872096667997514!3d41.00523670869087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caa7040068086b%3A0xe1ccfe98bc01b0d0!2sIstanbul!5e0!3m2!1sen!2str!4v1557171602668!5m2!1sen!2str"
+      width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+</section>
 
 </body>
 </html>
