--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
     You will receive emails as you do now - with shorter details of emails in the email.
   </p>
 </section>
+<br>
+<hr>
+<p>so which one do you like?</p>
+<br>
+<br>
 <script src="js/subs.js"></script>
 </body>
 </html>
